2004-09-18  Ulrich Drepper  <drepper@redhat.com>

	* resolv/res_mkquery.c (res_nmkquery): Randomize request ID every
	time.

2004-09-18  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/waitid.c (do_waitid): Pass fifth argument to
	system call.

2004-09-17  Ulrich Drepper  <drepper@redhat.com>

	* include/link.h (struct link_map): Add l_used element.
	* sysdeps/generic/ldsodefs.h: Define DL_DEBUG_UNUSED.
	* elf/rtld.c (process_dl_debug): Recognize unused.
	(dl_main): When unused debug flag is set check for unused direct
	dependencies.
	When printing dependencies and SONAME starts with /, omit the SONAME =>
	part.
	* elf/dl-lookup.c (_dl_lookup_symbol_x): Mark object in which the
	symbol has been found as used.
	* elf/ldd.bash.in: Add -u option.

2004-09-18  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/nscd_setup_thread.c (setup_thread):
	Do nothing if __NR_set_tid_address is not defined.  [BZ #390]

2004-09-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/posix/getaddrinfo.c: Use gethostbyname3_r NSS function
	in case it is available.

2004-09-17  Jakub Jelinek  <jakub@redhat.com>

	* nscd/nscd.c (parse_opt): Write arg string instead of (void *)
	key to the socket.

2004-09-17  Ulrich Drepper  <drepper@redhat.com>

	* misc/sys/cdefs.h: Define __nonnull using nonnull function attribute
	for gcc 3.3 and higher.
	* io/fcntl.h: Add __nonnull where appropriate.
	* io/ftw.h: Likewise.
	* io/utime.h: Likewise.
	* io/sys/poll.h: Likewise.
	* io/sys/sendfile.h: Likewise.
	* io/sys/stat.h: Likewise.
	* io/sys/statfs.h: Likewise.
	* io/sys/statvfs.h: Likewise.
	* posix/unistd.h: Likewise.
	* catgets/nl_types.h: Likewise.
	* crypt/crypt.h: Likewise.
	* debug/execinfo.h: Likewise.

2004-09-16  Ulrich Drepper  <drepper@redhat.com>

	* posix/glob.h: Remove cruft to make header usable outside glibc.
	The maintenance headache is too big.

	* configure.in: Add test for required SELinux features.
	* config.make.in: Add have-selinux entry.